[package]
name = "playnow_daemon"
version = "0.1.0"
authors = ["XMPPwocky <nttheis@gmail.com>"]

[dependencies]
hyper = "0.6.13"
serde = "*"
serde_json = "*"
steamwebapi = "~0.4.0"
steamid = "0.1.0"
websocket = "~0.13.1"
quick-error = "~0.1.4"
postgres = "~0.10"

[dependencies.redis]
git = "https://github.com/mitsuhiko/redis-rs.git"

